update to deploy api type product